// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrinkItem Coffee addon: matches snapshot 1`] = `
<div>
  <div
    class="mb-3 text-blueGray-600"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-col pr-2"
      >
        <span
          class="font-medium text-blueGray-700"
        >
          Sojamilch
        </span>
      </div>
      <div
        class="flex flex-col items-center justify-between ml-1 text-blueGray-600"
      >
        <div
          class="flex items-center justify-center"
        >
          <span
            class="flex flex-col"
          >
            <span
              class="flex justify-center gap-x-1"
            >
              <span>
                0.50
                <span
                  class="pl-1 text-blueGray-500"
                >
                  €
                </span>
              </span>
            </span>
          </span>
        </div>
        <div
          class="flex flex-col items-center w-full"
        >
          <hr
            aria-orientation="horizontal"
            class="chakra-divider css-1647zlw"
            role="separator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrinkItem cocktail: non-hh time matches snapshot 1`] = `
<div>
  <div
    class="mb-3 text-blueGray-600"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-col pr-2"
      >
        <span
          class="font-medium text-blueGray-700"
        >
          Raspberry Gimlet
        </span>
        <div
          class="leading-5 break-words cursor-default text-blueGray-400"
          data-testid="text-expand"
        >
          <div
            class="chakra-text css-16ytai3"
          >
            Eigene Infusion aus Himbeere und Gin, mit Limette und Lime
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between ml-1 text-blueGray-600"
      >
        <div
          class="flex items-center justify-center"
        >
          <span
            class="flex flex-col"
          >
            <span
              class="flex justify-center gap-x-1"
            >
              <span>
                8.00
                <span
                  class="pl-1 text-blueGray-500"
                >
                  €
                </span>
              </span>
            </span>
          </span>
        </div>
        <div
          class="flex flex-col items-center w-full"
        >
          <hr
            aria-orientation="horizontal"
            class="chakra-divider css-1647zlw"
            role="separator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrinkItem longdrink: matches snapshot 1`] = `
<div>
  <div
    class="mb-3 text-blueGray-600"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-col pr-2"
      >
        <span
          class="font-medium text-blueGray-700"
        >
          Campari
        </span>
        <div
          class="leading-5 break-words cursor-default text-blueGray-400"
          data-testid="text-expand"
        >
          <div
            class="chakra-text css-16ytai3"
          >
            Maracuja | Soda | Tonic
          </div>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between ml-1 text-blueGray-600"
      >
        <div
          class="flex items-center justify-center"
        >
          <span
            class="flex flex-col"
          >
            <span
              class="flex justify-center gap-x-1"
            >
              <span>
                7.80
                <span
                  class="pl-1 text-blueGray-500"
                >
                  €
                </span>
              </span>
            </span>
          </span>
        </div>
        <div
          class="flex flex-col items-center w-full"
        >
          <hr
            aria-orientation="horizontal"
            class="chakra-divider css-1647zlw"
            role="separator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrinkItem softdrink item matches snapshot 1`] = `
<div>
  <div
    class="mb-3 text-blueGray-600"
  >
    <div
      class="flex justify-between"
    >
      <div
        class="flex flex-col pr-2"
      >
        <div
          class="flex items-center"
        >
          <div
            class="fill-current w-10 h-10 mr-2"
            data-testid="svg-icon"
          >
            <svg
              viewBox="0 0 497 497"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M57.948 462.119l-23.067-23.068C-8.72 395.45-11.445 326.453 26.706 279.678c2.543-3.118 6.108-5.299 9.014-8.206l6.487-8.128 77.886-77.886 8.099-6.458c2.88-2.88 5.032-6.421 8.12-8.944 46.777-38.224 115.832-35.522 159.459 8.105l23.068 23.068c46.508 46.507 47.345 121.073 0 168.418l-92.473 92.473c-47.346 45.668-121.91 46.507-168.418-.001z"
                fill="#ffd54f"
              />
              <path
                d="M318 200.39l-22.229-22.229c-.352-.352-.71-.692-1.065-1.039 45.457 46.586 45.117 121.197-1.039 167.353l-92.473 92.473c-46.156 46.155-120.767 46.496-167.353 1.039.347.355.687.713 1.039 1.065l23.068 23.068c43.601 43.601 112.598 46.326 159.373 8.175 3.118-2.543 5.299-6.107 8.206-9.014l9.795-8.117 74.562-74.562 8.116-9.794c2.88-2.88 6.421-5.032 8.944-8.119 38.224-46.777 36.921-114.434-8.944-160.299z"
                fill="#ffca28"
              />
              <path
                d="M451.113 28.757c9.447-.505 17.244 7.252 16.786 16.701-1.252 25.871-8.135 75.779-40.946 108.758-24.469 24.593-58.425 34.815-84.837 38.997-22.312 3.533-41.537-15.595-38.118-37.924 4.048-26.433 14.097-60.441 38.566-85.034 32.812-32.978 82.685-40.114 108.549-41.498z"
                fill="#6fd7a3"
              />
              <path
                d="M380.341 152.083c-57.611 5.499-81.175 29.944-78.585 57.077.314 3.291.975 6.479 2.062 9.508 7.716 21.505 35.279 36.504 85.902 31.672 37.598-3.589 77.513-28.513 100.708-45.396 9.818-7.146 8.383-22.175-2.609-27.335-4.879-2.29-10.392-4.748-16.377-7.205-25.87-10.621-60.567-21.235-91.101-18.321z"
                fill="#bbf49b"
              />
              <path
                d="M487.818 177.609c-4.879-2.29-10.392-4.748-16.377-7.205-.796 3.57-2.834 6.929-6.186 9.368-23.195 16.884-63.111 41.808-100.708 45.397-26.385 2.518-46.492-.359-60.803-6.728.026.075.046.153.073.227 7.716 21.505 35.279 36.504 85.902 31.672 37.598-3.589 77.513-28.513 100.708-45.397 9.818-7.146 8.384-22.174-2.609-27.334z"
                fill="#9be69d"
              />
              <path
                d="M344.917 116.659c-5.499 57.611-29.944 81.175-57.077 78.585s-46.679-30.353-41.18-87.964c3.589-37.597 28.513-77.513 45.396-100.708 7.146-9.818 22.175-8.383 27.335 2.609 12.191 25.971 29.114 69.881 25.526 107.478z"
                fill="#bbf49b"
              />
              <g
                fill="#ffaa5f"
              >
                <path
                  d="M233.245 361.549l-.358-82.393 74.125.315h.032c4.127 0 7.482-3.337 7.5-7.468.017-4.142-3.326-7.514-7.468-7.532l-74.253-.316-.323-74.262c-.018-4.131-3.372-7.467-7.499-7.467h-.034c-4.142.018-7.485 3.391-7.467 7.533l.322 74.132-82.397-.35-.391-92.57c-3.587 3.235-11.472 10.902-14.94 14.287l.33 78.219-78.217-.333c-3.347 3.43-10.967 11.27-14.284 14.94l92.564.394.348 82.41-68.615-.281h-.031c-4.128 0-7.482 3.338-7.499 7.469-.017 4.142 3.327 7.514 7.469 7.531l68.74.282.29 68.749c.018 4.131 3.372 7.468 7.5 7.468h.032c4.142-.018 7.486-3.39 7.468-7.532l-.29-68.624 82.411.338.402 92.427c2.62-2.145 5.176-4.405 7.655-6.795l7.284-7.284-.34-78.286 78.305.321 7.224-7.224c2.498-2.498 4.854-5.076 7.084-7.718zm-97.41-.4l-.348-82.407 82.399.35.358 82.395z"
                />
                <path
                  d="M171.556 325.444c-2.929-2.929-2.929-7.678 0-10.607 2.929-2.929 7.678-2.929 10.607 0 2.929 2.929 2.929 7.678 0 10.607-2.929 2.929-7.678 2.929-10.607 0zM171.556 230.488c-2.929-2.929-2.929-7.678 0-10.607 2.929-2.929 7.678-2.929 10.607 0 2.929 2.929 2.929 7.678 0 10.606-2.929 2.93-7.678 2.93-10.607.001zM269.437 230.488c-2.929-2.929-2.929-7.678 0-10.607 2.929-2.929 7.678-2.929 10.607 0 2.929 2.929 2.929 7.678 0 10.606-2.929 2.93-7.678 2.93-10.607.001zM75.157 421.091c-2.929-2.929-2.929-7.678 0-10.607 2.929-2.929 7.678-2.929 10.606 0 2.929 2.929 2.929 7.678 0 10.607-2.928 2.929-7.677 2.929-10.606 0zM75.157 325.444c-2.929-2.929-2.929-7.678 0-10.607 2.929-2.929 7.678-2.929 10.606 0 2.929 2.929 2.929 7.678 0 10.607-2.928 2.929-7.677 2.929-10.606 0zM269.437 325.444c-2.929-2.929-2.929-7.678 0-10.607 2.929-2.929 7.678-2.929 10.607 0 2.929 2.929 2.929 7.678 0 10.607-2.929 2.929-7.678 2.929-10.607 0zM171.556 421.091c-2.929-2.929-2.929-7.678 0-10.607 2.929-2.929 7.678-2.929 10.607 0 2.929 2.929 2.929 7.678 0 10.607-2.929 2.929-7.678 2.929-10.607 0z"
                />
              </g>
            </svg>
          </div>
          <span
            class="font-medium text-blueGray-700"
          >
            Ananas
          </span>
        </div>
      </div>
      <div
        class="flex flex-col items-center justify-between ml-1 text-blueGray-600"
      >
        <div
          class="flex items-center justify-center"
        >
          <span
            class="flex flex-col"
          >
            <span
              class="flex justify-center gap-x-1"
            >
              <span>
                3.50
                <span
                  class="pl-1 text-blueGray-500"
                >
                  €
                </span>
              </span>
              <span
                class="text-blueGray-400"
              >
                0.3
                L
              </span>
            </span>
            <span
              class="flex justify-center gap-x-1"
            >
              <span>
                4.30
                <span
                  class="pl-1 text-blueGray-500"
                >
                  €
                </span>
              </span>
              <span
                class="text-blueGray-400"
              >
                0.4
                L
              </span>
            </span>
          </span>
        </div>
        <div
          class="flex flex-col items-center w-full"
        >
          <hr
            aria-orientation="horizontal"
            class="chakra-divider css-1647zlw"
            role="separator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
